<resources>
    <string name="app_name">ExpenseEase</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_your_account">Create your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone no.</string>
    <string name="alreay_have_an_account">Alreay have an account?</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="get_started">Get Started</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="income">Income</string>
    <string name="amount_available">Amount available</string>
    <string name="amount_you_are_left_with">Amount you have used</string>
    <string name="to_invest">To invest</string>
    <string name="to_save">To save</string>
    <string name="enter_your_monthly_income_salary_nhere_to_help_you_manage_your_nexpenses_throughout">Enter your monthly Income/Salary\nhere to help you manage your\nexpenses throughout.</string>
    <string name="income_salary">Income/Salary</string>
    <string name="lets_go">Lets go!</string>
    <string name="the_rule">The Rule</string>
    <string name="this_rule_helps_you_managing_your_income_salary_nby_dividing_it_into_different_segments_initially_it_nis_using_50_30_20_rule_of_finance_i_e_for_your_nexpenses_savings_and_investing_respectiveley">This rule helps you managing your income/\nsalary by dividing it into different segments.\nInitially, it is using 50-30-20 rule of finance i.e.,\nfor your Expenses, Savings and Investing\nrespectiveley.</string>
    <string name="rule_by_you">Rule by you</string>
    <string name="for_expenditure_in">For Expenditure (in %)</string>
    <string name="for_savings_in">For Savings (in %)</string>
    <string name="for_investing_in">For Investing (in %)</string>
    <string name="user_data">User Data</string>
    <string name="save">save</string>
    <string name="rule">Rule</string>
    <string name="amount">Amount</string>
    <string name="eg_2000">eg. 2000</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="select_date">Select date</string>
    <string name="graphical_analysis">Graphical analysis</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="logout">Logout</string>
    <string name="refer_a_friend">Refer a friend</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="general_n_advices">General \n advices</string>
    <string name="expense">Expense</string>
    <string name="home">Home</string>
    <string name="your_receipts">Your receipts</string>
    <string name="capture">Capture</string>
    <string name="your_income">Your income</string>
    <string name="_50_30_20">Financial rule: 50-30-20</string>
    <string name="manage_your_n_daily_expenses">Manage your \n Daily Expenses</string>
    <string name="by_using_this_application_you_will_be_n_able_to_manage_your_daily_expenses">By using this application you will be\n able to manage your daily expenses</string>
    <string name="amount1">Amount:</string>
    <string name="_2000">2000</string>
    <string name="category1">Category:</string>
    <string name="eg_food_shopping_etc">eg. Food ,Shopping etc.</string>
    <string name="open_drawer" />
    <string name="close_drawer" />
</resources>