<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_profile1"/>
        <item
            android:id="@+id/graphical"
            android:title="@string/graphical_analysis"
            android:icon="@drawable/ic_graph2"/>

        <item
            android:id="@+id/refer"
            android:title="@string/refer_a_friend"
            android:icon="@drawable/ic_share1"/>
        <item
            android:id="@+id/privacy"
            android:title="@string/privacy_policy"
            android:icon="@drawable/ic_privacy1"/>

    </group>

    <item android:title=" ">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />

        </menu>
    </item>

</menu>