<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4E8D1"
    tools:context=".User_data">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/user_data"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/your_inc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/your_income"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />


    <EditText
        android:id="@+id/income"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edt_back"
        android:drawableEnd="@drawable/ic_edit"
        android:elevation="50dp"
        android:layout_marginEnd="70dp"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/income"
        android:inputType="number"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/your_inc"
        app:layout_constraintTop_toBottomOf="@+id/your_inc" />


    <TextView
        android:id="@+id/tv_rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/your_inc"
        app:layout_constraintTop_toBottomOf="@+id/income" />

    <TextView
        android:id="@+id/rule"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edt_back"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:elevation="50dp"
        android:text="@string/_50_30_20"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/income"
        app:layout_constraintStart_toStartOf="@+id/tv_rule"
        app:layout_constraintTop_toBottomOf="@+id/tv_rule" />


</androidx.constraintlayout.widget.ConstraintLayout>