<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@drawable/expense_list_design"
    android:layout_marginBottom="15dp">

    <TextView
        android:id="@+id/date_list"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_amt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount1"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/date_list"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/amt_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:text="@string/_2000"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/label_amt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_amt"
        app:layout_constraintTop_toTopOf="@+id/label_amt" />

    <TextView
        android:id="@+id/label_cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category1"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/date_list" />

    <TextView
        android:id="@+id/cat_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:text="@string/_2000"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/label_cat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_cat"
        app:layout_constraintTop_toTopOf="@+id/label_cat" />

</androidx.constraintlayout.widget.ConstraintLayout>