<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    tools:context=".Set_income">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/income_intro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:text="@string/enter_your_monthly_income_salary_nhere_to_help_you_manage_your_nexpenses_throughout"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edt_back"
        android:drawablePadding="10dp"
        android:hint="@string/income_salary"
        android:inputType="number"
        android:padding="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintEnd_toEndOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_letsgo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/signup_bt_custom"
        android:backgroundTint="#5072A7"
        android:text="@string/lets_go"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        app:layout_constraintEnd_toEndOf="@+id/income"
        app:layout_constraintStart_toStartOf="@+id/income"
        app:layout_constraintTop_toBottomOf="@+id/income" />


</androidx.constraintlayout.widget.ConstraintLayout>